// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableHeader Style tests should render with condensed styles 1`] = `
.circuit-0 {
  background-color: #FFF;
  border-bottom: 1px solid #CCC;
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 120ms ease-in-out,color 120ms ease-in-out;
  transition: background-color 120ms ease-in-out,color 120ms ease-in-out;
  color: #666;
  font-size: 13px;
  font-weight: 700;
  padding: 8px 24px;
  vertical-align: middle;
  vertical-align: middle;
  font-size: 13px;
  line-height: 20px;
  padding: 12px 16px;
  padding: 8px 16px;
}

<th
  class="circuit-0 circuit-1"
  data-testid="table-header"
>
  Foo
</th>
`;

exports[`TableHeader Style tests should render with default styles 1`] = `
.circuit-0 {
  background-color: #FFF;
  border-bottom: 1px solid #CCC;
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 120ms ease-in-out,color 120ms ease-in-out;
  transition: background-color 120ms ease-in-out,color 120ms ease-in-out;
  color: #666;
  font-size: 13px;
  font-weight: 700;
  padding: 8px 24px;
  vertical-align: middle;
}

<th
  class="circuit-0 circuit-1"
  data-testid="table-header"
>
  Foo
</th>
`;

exports[`TableHeader Style tests should render with hovered styles 1`] = `
.circuit-0 {
  background-color: #FFF;
  border-bottom: 1px solid #CCC;
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 120ms ease-in-out,color 120ms ease-in-out;
  transition: background-color 120ms ease-in-out,color 120ms ease-in-out;
  background-color: #F5F5F5;
  color: #666;
  font-size: 13px;
  font-weight: 700;
  padding: 8px 24px;
  vertical-align: middle;
}

<th
  class="circuit-0 circuit-1"
  data-testid="table-header"
>
  Foo
</th>
`;

exports[`TableHeader Style tests should render with row styles 1`] = `
.circuit-0 {
  background-color: #FFF;
  border-bottom: 1px solid #CCC;
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 120ms ease-in-out,color 120ms ease-in-out;
  transition: background-color 120ms ease-in-out,color 120ms ease-in-out;
}

<th
  class="circuit-0 circuit-1"
  data-testid="table-header"
>
  Foo
</th>
`;

exports[`TableHeader Style tests should render with sortable styles 1`] = `
.circuit-4 {
  background-color: #FFF;
  border-bottom: 1px solid #CCC;
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 120ms ease-in-out,color 120ms ease-in-out;
  transition: background-color 120ms ease-in-out,color 120ms ease-in-out;
  color: #666;
  font-size: 13px;
  font-weight: 700;
  padding: 8px 24px;
  vertical-align: middle;
  cursor: pointer;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.circuit-4:focus-within::after {
  content: '';
  display: block;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 1;
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-4:focus-within::after::-moz-focus-inner {
  border: 0;
}

.circuit-4:focus-within,
.circuit-4:hover {
  background-color: #F5F5F5;
  color: #3063E9;
}

.circuit-4:focus-within > button,
.circuit-4:hover > button {
  opacity: 1;
}

.circuit-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 40px;
  width: 20px;
  position: absolute;
  left: 0;
  top: 50%;
  opacity: 0;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: opacity 120ms ease-in-out;
  transition: opacity 120ms ease-in-out;
  color: #3063E9;
  border: 0;
  background: none;
  outline: 0;
  padding: 0;
  margin: 0;
  cursor: pointer;
}

.circuit-3:focus {
  opacity: 1;
}

.circuit-3:focus::-moz-focus-inner {
  border: 0;
}

.circuit-0 {
  margin-top: -3px;
  margin-bottom: -3px;
}

.circuit-2 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<th
  aria-label="Sort by Foo in ascending order"
  aria-sort="none"
  class="circuit-4 circuit-5"
  data-testid="table-header"
>
  <button
    class="circuit-3"
    role="button"
    title="Sort by Foo in ascending order"
  >
    <svg
      class="circuit-0"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4 10l4-4 4 4"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    <svg
      class="circuit-0"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4 6l4 4 4-4"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    <span
      class="circuit-2"
    >
      Sort by Foo in ascending order
    </span>
  </button>
  Foo
</th>
`;

exports[`TableHeader Style tests sortable + sorted should render with sortable + sorted ascending styles 1`] = `
.circuit-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 40px;
  width: 20px;
  position: absolute;
  left: 0;
  top: 50%;
  opacity: 0;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: opacity 120ms ease-in-out;
  transition: opacity 120ms ease-in-out;
  color: #3063E9;
  border: 0;
  background: none;
  outline: 0;
  padding: 0;
  margin: 0;
  cursor: pointer;
}

.circuit-2:focus {
  opacity: 1;
}

.circuit-2:focus::-moz-focus-inner {
  border: 0;
}

.circuit-0 {
  margin-top: -3px;
  margin-bottom: -3px;
}

.circuit-1 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-3 {
  background-color: #FFF;
  border-bottom: 1px solid #CCC;
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 120ms ease-in-out,color 120ms ease-in-out;
  transition: background-color 120ms ease-in-out,color 120ms ease-in-out;
  color: #666;
  font-size: 13px;
  font-weight: 700;
  padding: 8px 24px;
  vertical-align: middle;
  cursor: pointer;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.circuit-3:focus-within::after {
  content: '';
  display: block;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 1;
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-3:focus-within::after::-moz-focus-inner {
  border: 0;
}

.circuit-3:focus-within,
.circuit-3:hover {
  background-color: #F5F5F5;
  color: #3063E9;
}

.circuit-3:focus-within > button,
.circuit-3:hover > button {
  opacity: 1;
}

.circuit-3 > button {
  opacity: 1;
}

<th
  aria-sort="ascending"
  class="circuit-3 circuit-4"
  data-testid="table-header"
>
  <button
    class="circuit-2"
    role="button"
    title="Sort"
  >
    <svg
      class="circuit-0"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4 6l4 4 4-4"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    <span
      class="circuit-1"
    >
      Sort
    </span>
  </button>
  Foo
</th>
`;

exports[`TableHeader Style tests sortable + sorted should render with sortable + sorted descending styles 1`] = `
.circuit-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 40px;
  width: 20px;
  position: absolute;
  left: 0;
  top: 50%;
  opacity: 0;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: opacity 120ms ease-in-out;
  transition: opacity 120ms ease-in-out;
  color: #3063E9;
  border: 0;
  background: none;
  outline: 0;
  padding: 0;
  margin: 0;
  cursor: pointer;
}

.circuit-2:focus {
  opacity: 1;
}

.circuit-2:focus::-moz-focus-inner {
  border: 0;
}

.circuit-0 {
  margin-top: -3px;
  margin-bottom: -3px;
}

.circuit-1 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-3 {
  background-color: #FFF;
  border-bottom: 1px solid #CCC;
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 120ms ease-in-out,color 120ms ease-in-out;
  transition: background-color 120ms ease-in-out,color 120ms ease-in-out;
  color: #666;
  font-size: 13px;
  font-weight: 700;
  padding: 8px 24px;
  vertical-align: middle;
  cursor: pointer;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.circuit-3:focus-within::after {
  content: '';
  display: block;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 1;
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-3:focus-within::after::-moz-focus-inner {
  border: 0;
}

.circuit-3:focus-within,
.circuit-3:hover {
  background-color: #F5F5F5;
  color: #3063E9;
}

.circuit-3:focus-within > button,
.circuit-3:hover > button {
  opacity: 1;
}

.circuit-3 > button {
  opacity: 1;
}

<th
  aria-sort="descending"
  class="circuit-3 circuit-4"
  data-testid="table-header"
>
  <button
    class="circuit-2"
    role="button"
    title="Sort"
  >
    <svg
      class="circuit-0"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4 10l4-4 4 4"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    <span
      class="circuit-1"
    >
      Sort
    </span>
  </button>
  Foo
</th>
`;
